Finish implimentation of pagination to input_stores_usages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -761,6 +761,7 @@ form {
 
 @import url('./tables.scss');
 @import url('./forms.scss');
+@import url('./pagination.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
