Finish implimentation of pagination on cash-requests

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -762,6 +762,7 @@ form {
 @import url('./tables.scss');
 @import url('./forms.scss');
 @import url('./pagination.scss');
+@import url('./cashRequests.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
