Add changes for pagination to cashflows

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -763,6 +763,7 @@ form {
 @import url('./forms.scss');
 @import url('./pagination.scss');
 @import url('./cashRequests.scss');
+@import url('./cashflows.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
