--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -1,54 +1,77 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Cashflow', new_cashflow_path, class:"button btn-orange my-3" %>
+<div class="cashflow-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="cashflow-first-label">Create New Request</button>
+      <button class="cashflow-second-label">Cash Requests</button>
+    </div>
+  </div>
 
-<div class="box outerdiv">
-  <h1 class="has-text-centered"><strong>Cashflows</strong></h1>
+  <div class="pagination">
+    <div class="columns is-centered cashflow-first-div">
+      <div class="column is-6 mx-auto">
+        <div class="card outerdiv">
+          <div class="">
+            <h1 class='has-text-centered'><strong>New Cashflow</strong></h1>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <%= render 'form', cashflow: @cashflow %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <table class="table is-striped is-bordered">
-    <thead>
-      <tr>
-        <th>Company name</th>
-        <th>Date</th>
-        <th>Season</th>
-        <th>Month</th>
-        <th>Grower name</th>
-        <th>Hectrage</th>
-        <th>Operation</th>
-        <th>Unit price</th>
-        <th>Quantity per hectre</th>
-        <th>Unity</th>
-        <th>Input name</th>
-        <th>Total amount</th>
-        <th>Tian Ze  number</th>
-        <th>Total Quantity</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+    <div class="box outerdiv cashflow-second-div">
+      <h1 class="has-text-centered"><strong>Cashflows</strong></h1>
 
-    <tbody>
-      <% @cashflows.each do |cashflow| %>
-        <tr>
-          <td><%= cashflow.company_name %></td>
-          <td><%= cashflow.date %></td>
-          <td><%= cashflow.season %></td>
-          <td><%= cashflow.month %></td>
-          <td><%= cashflow.grower_name %></td>
-          <td><%= cashflow.hectrage %></td>
-          <td><%= cashflow.operation %></td>
-          <td><%= cashflow.unit_price %></td>
-          <td><%= cashflow.quantity_per_hectre %></td>
-          <td><%= cashflow.unity %></td>
-          <td><%= cashflow.input_name %></td>
-          <td><%= cashflow.total_amount %></td>
-          <td><%= cashflow.tian_ze_number %></td>
-          <td><%= cashflow.total_quantity %></td>
-          <td><%= link_to 'Show', cashflow %></td>
-          <td><%= link_to 'Edit', edit_cashflow_path(cashflow) %></td>
-          <td><%= link_to 'Destroy', cashflow, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+      <table class="table is-striped is-bordered">
+        <thead>
+          <tr>
+            <th>Company name</th>
+            <th>Date</th>
+            <th>Season</th>
+            <th>Month</th>
+            <th>Grower name</th>
+            <th>Hectrage</th>
+            <th>Operation</th>
+            <th>Unit price</th>
+            <th>Quantity per hectre</th>
+            <th>Unity</th>
+            <th>Input name</th>
+            <th>Total amount</th>
+            <th>Tian Ze  number</th>
+            <th>Total Quantity</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @cashflows.each do |cashflow| %>
+            <tr>
+              <td><%= cashflow.company_name %></td>
+              <td><%= cashflow.date %></td>
+              <td><%= cashflow.season %></td>
+              <td><%= cashflow.month %></td>
+              <td><%= cashflow.grower_name %></td>
+              <td><%= cashflow.hectrage %></td>
+              <td><%= cashflow.operation %></td>
+              <td><%= cashflow.unit_price %></td>
+              <td><%= cashflow.quantity_per_hectre %></td>
+              <td><%= cashflow.unity %></td>
+              <td><%= cashflow.input_name %></td>
+              <td><%= cashflow.total_amount %></td>
+              <td><%= cashflow.tian_ze_number %></td>
+              <td><%= cashflow.total_quantity %></td>
+              <td><%= link_to 'Show', cashflow %></td>
+              <td><%= link_to 'Edit', edit_cashflow_path(cashflow) %></td>
+              <td><%= link_to 'Destroy', cashflow, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+  </div>
 </div>
-
-
