Add pagination for deduction tables

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -764,6 +764,7 @@ form {
 @import url('./pagination.scss');
 @import url('./cashRequests.scss');
 @import url('./cashflows.scss');
+@import url('./deduction.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
