Add pagination to purchases

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -765,6 +765,7 @@ form {
 @import url('./cashRequests.scss');
 @import url('./cashflows.scss');
 @import url('./deduction.scss');
+@import url('./Purchases.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
