Add pagination to rentals page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -766,6 +766,7 @@ form {
 @import url('./cashflows.scss');
 @import url('./deduction.scss');
 @import url('./Purchases.scss');
+@import url('./rentals.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
